# cash_web_04

./: .gitignore  README.md  main.py  pyproject.toml  task-summary-20250120-04.md  task-summary-20250501-001.md  task-summary-20251202-001.md  task-summary-20251202-002.md  task-summary-20251204-001.md  test_api.db  test_association.sh
data/: cashlog.db
docs/: architecture.md
scripts/: README.md  add_test_data.sh  add_todo_test_data.sh  backup_restore_error.sh  backup_restore_normal.sh  run_full_test.sh  run_integration_tests.sh  setup_todo_test_data.sh  setup_transaction_test_data.sh  test_association.sh  test_backup_restore_error_cases.sh  test_backup_restore_workflow.sh  test_transaction_todo_association.sh
src/cashlog/: README.md
src/cashlog/api/: README.md  __init__.py  todo.py  transaction.py
src/cashlog/api/v1/: todo.py  transaction.py
src/cashlog/cli/: data_cli.py  report_cli.py  todo_cli.py  transaction_cli.py
src/cashlog/models/: db.py  schemas.py  todo.py  transaction.py
src/cashlog/services/: report_service.py  todo_service.py  transaction_service.py
src/cashlog/utils/: formatter.py
tests/: README.md  test_api.py  test_backup_restore_cli.py  test_backup_restore_service.py  test_cli_base.py  test_data_cli.py  test_data_service.py  test_report_cli.py  test_report_generation_cli.py  test_report_service.py  test_rest_api.py  test_todo_cli.py  test_transaction_cli.py
tmp_cashlog_test/: invalid_backup.db  text_file.txt  valid_backup.db
